# brain

./: .gitattributes  Cargo.toml  README.md  database-er-diagram.odg  database-normalization.ods  rustfmt.toml
src/: brn_tui.rs  collection_tool.rs  database.rs  directory.rs  file_utility.rs  history.rs  main.rs  message.rs  note-template.md  note.rs  note_link.rs  note_metadata.rs  note_property.rs  note_tagging.rs  note_type.rs  note_utility.rs  notes.rs  settings.rs  tui_data.rs
src/brn_tui/: input_mode.rs  input_string.rs  main.rs  mod.rs  stateful_list.rs  tui_data.rs
src/for_zettelkasten_dir/: graph.js  index.html  style.css
src/graph/: graph_edge.rs  graph_node.rs  main.rs  mod.rs
