[package]
name = "brn"
version = "2.3.2"
authors = ["Robert Lag <rob.lag@outlook.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
regex = "~1.4"
chrono = "~0.4"
yaml-rust = "~0.4"
colored = "~2.0"
rusqlite = "~0.25"
lazy_static = "~1.4"
indoc = "~1.0"
tui = { version = "~0.16.0", default-features=false, features = ['crossterm'] }
crossterm = "~0.22.1"
clipboard = "~0.5.0"
serde = { version = "~1.0.137", features = ["derive"] }
serde_json = "~1.0.82"
string-builder = "~0.2.0"
include_dir = "0.6"
